<resources>
    <string name="app_name">T1_DSM</string>


    <string name="nav_edit_profile">Editar Perfil</string>
    <string name="nav_my_post">Minhas postagens</string>
    <string name="nav_config">Configurações</string>
    <string name="nav_notifications">Notificações</string>
    <string name="nav_exit">Sair</string>
    <string name="nav_mode_light">Modo Claro</string>
    <string name="nav_description_image">Imagem do usuário</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="btn_create_post">Escrever post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_accept">Entrar</string>

    <!-- Strings used for fragments for navigation -->


    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>

    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_my_post">My Posts</string>
    <string name="nav_config">Configuration</string>
    <string name="nav_notifications">Notification</string>
    <string name="nav_exit">Logout</string>
    <string name="nav_mode_light">Light Mode</string>
    <string name="nav_description_image">Profile Picture</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="btn_accept">LogIn</string>

    <!-- Login Screen Strings -->

    <string name="email">Type your Email</string>
    <string name="password">Type your Password</string>
    <string name="login">LogIn</string>
    <string name="remember_pass">Don\'t remember your pass?</string>
    <string name="text_signup">Don\'t have an account?</string>
    <string name="link_signup">Register now!</string>
    <!--- Messages -->
    <string name="error_invalid_email_pass">Invalid Email/Password</string>

    <!-- Register Screen Strings -->
    <string name="name">Type your Name</string>
    <string name="signup">Accept and Register</string>
    <!--- Messages -->
    <string name="error_all_camps">Fill in all Fields</string>
    <string name="error_weak_password">Password Must Contain at Least 6 Characters</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_duplicate_email">Email Already Registered</string>
    <string name="error_unknown">Unknown Error - Contact Support</string>
    <string name="success_signup">Registration Successful!</string>


    <!-- Remember Pass Screen Strings -->
    <string name="email_confirmation">Confirm your Email</string>
    <string name="remember_confirmation">Redefine Password</string>


    <!--Create Post-->
    <string name="write_post">Escreva sua publicação</string>
    <string name="write_game">Escreva o jogo</string>
    <string name="write_rank">Escreva o rank</string>
    <string name="write_vagancies">Escreva o número de vagas</string>
    <string name="publish_post">Publicar</string>

    <!-- Perfil Screen Strings -->
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="logout_confirmation">Do you really want to LOGOUT?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>