<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_nav_edit_profile"
            android:title="@string/nav_edit_profile" />
        <item
            android:id="@+id/nav_my_post"
            android:icon="@drawable/ic_nav_my_post"
            android:title="@string/nav_my_post" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_nav_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_nav_config"
            android:title="@string/nav_config" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/nav_exit" />
        <item
            android:id="@+id/nav_mode_light"
            android:icon="@drawable/ic_nav_mode_light"
            android:title="@string/nav_mode_light" />
    </group>
</menu>